# dj-app

./: CMakeLists.txt
Source/: DJAudioPlayer.cpp  DJAudioPlayer.h  DeckGUI.cpp  DeckGUI.h  Headers.cpp  Headers.h  Main.cpp  MainComponent.cpp  MainComponent.h  PlaylistComponent.cpp  PlaylistComponent.h  TrackDeck.cpp  TrackDeck.h  Utils.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Playback/: DJAudioPlayer.cpp  DJAudioPlayer.h  TrackDeck.cpp  TrackDeck.h  WaveformDisplay.cpp  WaveformDisplay.h
